--- a/examples/Code-Documentation-QA-Bot/main.ipynb
+++ b/examples/Code-Documentation-QA-Bot/main.ipynb
@@ -58,7 +58,7 @@
     "import os\n",
     "\n",
     "# Configuring the environment variable OPENAI_API_KEY\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"sk-...\"\n",
     "if \"OPENAI_API_KEY\" not in os.environ:\n",
     "    # OR set the key here as a variable\n",
     "    os.environ[\"OPENAI_API_KEY\"] = \"sk-...\"\n",
@@ -390,7 +390,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.11.3 ('env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -405,6 +405,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.3"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "511a7c77cb034b09af5465c01316a0f4bb20176d139e60e6d7915f9a637a5037"
+   }
   }
  },
  "nbformat": 4,
