change wording of description

--- a/examples/reducing_hallucinations_ai_agents/main.ipynb
+++ b/examples/reducing_hallucinations_ai_agents/main.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Reducing Hallucinations from AI Agents using Long-Term Memory\n",
     "### Introduction to Critique-Based Contexting with OpenAI, LangChain, and LanceDB\n",
-    "AI agents can help simplify and automate tedious workflows. By going through this notebook, we'll introduce how you can reduce hallucinations of AI agents by using critique-based contexting with a fitness trainer agent example."
+    "AI agents can help simplify and automate tedious workflows. By going through this notebook, we'll introduce how you can reduce hallucinations from AI agents by using critique-based contexting with a fitness trainer agent example."
    ]
   },
   {
@@ -236,7 +236,7 @@
    "source": [
     "Let's run. Feel free to use your own input!\n",
     "\n",
-    "Notice that in the first run there wouldn't be any critiques yet, since the database is empty. After the first run, critiques should appear."
+    "Notice that in the first run there wouldn't be any critiques yet, since the database is empty. After the first run, critiques should appear. The provided output is the result of a particular run after a few runs."
    ]
   },
   {
