fix typo agents

--- a/examples/reducing_hallucinations_ai_agents/main.ipynb
+++ b/examples/reducing_hallucinations_ai_agents/main.ipynb
@@ -39,7 +39,7 @@
    "outputs": [],
    "source": [
     "from langchain.agents import load_tools\n",
-    "from langchain.agents import initialize_agentNow let's install some required python libraries, as we'll be using LangChain, SerpApi for Google Search, and LanceDB. We'll also need dotenv to retrieve our environment variables.\n",
+    "from langchain.agents import initialize_agent\n",
     "from langchain.agents import AgentType\n",
     "from langchain.chat_models import ChatOpenAI"
    ]
