js testing added

--- a/examples/youtube_bot/main.ipynb
+++ b/examples/youtube_bot/main.ipynb
@@ -329,6 +329,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "6dee5779",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!rm -rf /tmp/lancedb"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "id": "d9246741",
    "metadata": {},
@@ -345,8 +355,6 @@
     }
    ],
    "source": [
-    "!rm -rf /tmp/lancedb\n",
-    "\n",
     "db = lancedb.connect(\"/tmp/lancedb\")\n",
     "tbl = db.create_table(\"youtube-chatbot\", data)\n",
     "len(tbl)"
