[Multimodal Video Search] Add FTS and dataset generation code (#25)
* multi-modal cleanup

* remove print statement

* add dataset generation files and make fts working

* add example to main readme

* remove pip install

--- a/examples/multimodal_video_search/main.ipynb
+++ b/examples/multimodal_video_search/main.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Multimodal video search using CLIP and LanceDB\n",
     "We used LanceDB to store frames every thirty seconds and the title of 13000+ videos, 5 random from each top category from the Youtube 8M dataset. \n",
-    "Then, we used the CLIP model to embed frames and titles together. Here are the results."
+    "Then, we used the CLIP model to embed frames and titles together. With LanceDB, we can perform embedding, keyword, and SQL search on these videos."
    ]
   },
   {
@@ -37,8 +37,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import io\n",
-    "import PIL\n",
     "import duckdb\n",
     "import lancedb"
    ]
@@ -50,9 +48,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !wget https://vectordb-recipes.s3.us-west-2.amazonaws.com/multimodal_video_lance.tar.gz\n",
+    "!wget https://vectordb-recipes.s3.us-west-2.amazonaws.com/multimodal_video_lance.tar.gz\n",
     "!tar -xvf multimodal_video_lance.tar.gz\n",
-    "!mv multimodal_video.lance rawdata.lance"
+    "!mkdir -p data/video-lancedb\n",
+    "!mv multimodal_video.lance data/video-lancedb/"
    ]
   },
   {
@@ -70,18 +69,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pyarrow.compute as pc\n",
-    "import lance\n",
-    "\n",
     "db = lancedb.connect(\"data/video-lancedb\")\n",
-    "if \"multimodal_video\" in db.table_names():\n",
-    "    tbl= db.open_table(\"multimodal_video\")\n",
-    "else:\n",
-    "    # First data processing and full-text-search index\n",
-    "    data = lance.dataset(\"rawdata.lance\").to_table()\n",
-    "    # remove null prompts\n",
-    "    tbl = db.create_table(\"multimodal_video\", data.filter(~pc.field(\"text\").is_null()), mode=\"overwrite\")\n",
-    "    # tbl.create_fts_index([\"text\"])"
+    "tbl = db.open_table(\"multimodal_video\")"
    ]
   },
   {
@@ -145,7 +134,7 @@
     "        \"import lancedb\\n\"\n",
     "        \"db = lancedb.connect('data/video-lancedb')\\n\"\n",
     "        \"tbl = db.open_table('multimodal_video')\\n\\n\"\n",
-    "        f\"tbl.search('{query}').where(video_id IN (SELECT DISTINCT video_id FROM videos);).limit(9).to_df()\"\n",
+    "        f\"tbl.search('{query}').limit(9).to_df()\"\n",
     "    )\n",
     "    return (_extract(tbl.search(query).limit(9).to_df()), code)\n",
     "\n",
@@ -195,17 +184,17 @@
     "    gr.Markdown('''\n",
     "            # Multimodal video search using CLIP and LanceDB\n",
     "            We used LanceDB to store frames every thirty seconds and the title of 13000+ videos, 5 random from each top category from the Youtube 8M dataset. \n",
-    "            Then, we used the CLIP model to embed frames and titles together. Here are the results.\n",
+    "            Then, we used the CLIP model to embed frames and titles together. With LanceDB, we can perform embedding, keyword, and SQL search on these videos.\n",
     "            ''')\n",
     "    with gr.Row():\n",
     "        with gr.Tab(\"Embeddings\"):\n",
-    "            vector_query = gr.Textbox(value=\"cooking show\", show_label=False)\n",
+    "            vector_query = gr.Textbox(value=\"retro gaming\", show_label=False)\n",
     "            b1 = gr.Button(\"Submit\")\n",
-    "        # with gr.Tab(\"Keywords\"):\n",
-    "        #     keyword_query = gr.Textbox(value=\"car show\", show_label=False)\n",
-    "        #     b2 = gr.Button(\"Submit\")\n",
+    "        with gr.Tab(\"Keywords\"):\n",
+    "            keyword_query = gr.Textbox(value=\"ninja turtles\", show_label=False)\n",
+    "            b2 = gr.Button(\"Submit\")\n",
     "        with gr.Tab(\"SQL\"):\n",
-    "            sql_query = gr.Textbox(value=\"SELECT DISTINCT * from videos WHERE start_time > 0 LIMIT 9\", show_label=False)\n",
+    "            sql_query = gr.Textbox(value=\"SELECT DISTINCT video_id, * from videos WHERE start_time > 0 LIMIT 9\", show_label=False)\n",
     "            b3 = gr.Button(\"Submit\")\n",
     "    with gr.Row():\n",
     "        code = gr.Code(label=\"Code\", language=\"python\")\n",
@@ -213,19 +202,11 @@
     "        gallery = gr.HTML()\n",
     "        \n",
     "    b1.click(find_video_vectors, inputs=vector_query, outputs=[gallery, code])\n",
-    "    # b2.click(find_video_keywords, inputs=keyword_query, outputs=[gallery, code])\n",
+    "    b2.click(find_video_keywords, inputs=keyword_query, outputs=[gallery, code])\n",
     "    b3.click(find_video_sql, inputs=sql_query, outputs=[gallery, code])\n",
     "    \n",
     "demo.launch()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bbd6fb9d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
