--- a/examples/arxiv-recommender/main.ipynb
+++ b/examples/arxiv-recommender/main.ipynb
@@ -213,7 +213,7 @@
     "LENGTH = 10000 # Reduce the size for demo\n",
     "def create_table():\n",
     "    db = lancedb.connect(\"db\")\n",
-    "    df = get_arxiv_df(embed_func_clip)\n",
+    "    df = get_arxiv_df(embed_func_clip, LENGTH)\n",
     "\n",
     "    tbl = db.create_table(\"arxiv\", data=df, mode=\"overwrite\")\n",
     "\n",
@@ -228,7 +228,6 @@
    "outputs": [],
    "source": [
     "import lancedb\n",
-    "import build_table # helper local module\n",
     "\n",
     "db = lancedb.connect(\"db\")\n",
     "\n",
