--- a/examples/arxiv-recommender/main.ipynb
+++ b/examples/arxiv-recommender/main.ipynb
@@ -17,7 +17,8 @@
     "\n",
     "## OpenCLIP\n",
     "\n",
-    "![CLIP%20%281%29.png](attachment:CLIP%20%281%29.png)\n",
+    "![CLIP (1)](https://github.com/lancedb/vectordb-recipes/assets/15766192/11b3b900-0bcb-4a4a-8fd4-804611c85972)\n",
+    "\n",
     "\n",
     "OpenCLIP an open source implementation of OpenAI's CLIP (Contrastive Language-Image Pre-training) as is available with various backends"
    ]
@@ -713,13 +714,19 @@
    "metadata": {},
    "source": [
     "The visualizations are very interesting and is worth exploring more. IN preliminary analysis, you can see that it succesfully creates clusters of similar types of papers. There are a few things that can be done next like comparing embeddings on various openclip models sizes and datasets. \n",
-    "![Screenshot%202023-08-24%20at%203.47.51%20PM.png](attachment:Screenshot%202023-08-24%20at%203.47.51%20PM.png)"
+    "<img width=\"1433\" alt=\"Screenshot 2023-08-24 at 3 47 51 PM\" src=\"https://github.com/lancedb/vectordb-recipes/assets/15766192/34ef88a3-2925-4450-abcd-1abc350ef3e4\">"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6b0e75b",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.11.4 ('env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -734,6 +741,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "511a7c77cb034b09af5465c01316a0f4bb20176d139e60e6d7915f9a637a5037"
+   }
   }
  },
  "nbformat": 4,
