fix multimodal clip cells

--- a/examples/multimodal_clip/main.ipynb
+++ b/examples/multimodal_clip/main.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "!pip install --quiet -U lancedb\n",
     "!pip install --quiet gradio transformers torch torchvision duckdb\n",
-    "! pip install pip install tantivy@git+https://github.com/quickwit-oss/tantivy-py#164adc87e1a033117001cf70e38c82a53014d985"
+    "!pip install pip install tantivy@git+https://github.com/quickwit-oss/tantivy-py#164adc87e1a033117001cf70e38c82a53014d985"
    ]
   },
   {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9b7e97f9",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
     "    tbl= db.open_table(\"diffusiondb\")\n",
     "else:\n",
     "    # First data processing and full-text-search index\n",
-    "    data = lance.dataset(\"rawdata.lance\").to_table()\n",
+    "    data = lance.dataset(\"rawdata.lance/diffusiondb_test\").to_table()\n",
     "    # remove null prompts\n",
     "    tbl = db.create_table(\"diffusiondb\", data.filter(~pc.field(\"prompt\").is_null()), mode=\"overwrite\")\n",
     "    tbl.create_fts_index([\"prompt\"])"
@@ -116,19 +116,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "f8331d87",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/ayushchaurasia/Documents/vectordb-recipes/env/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers import CLIPModel, CLIPProcessor, CLIPTokenizerFast\n",
     "\n",
@@ -145,6 +136,167 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "82c50eaf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prompt</th>\n",
+       "      <th>seed</th>\n",
+       "      <th>step</th>\n",
+       "      <th>cfg</th>\n",
+       "      <th>sampler</th>\n",
+       "      <th>width</th>\n",
+       "      <th>height</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>image_nsfw</th>\n",
+       "      <th>prompt_nsfw</th>\n",
+       "      <th>vector</th>\n",
+       "      <th>image</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>a renaissance portrait of dwayne johnson, art ...</td>\n",
+       "      <td>2480545905</td>\n",
+       "      <td>50</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>k_euler_ancestral</td>\n",
+       "      <td>512</td>\n",
+       "      <td>768</td>\n",
+       "      <td>2022-08-20 05:28:00</td>\n",
+       "      <td>0.163488</td>\n",
+       "      <td>0.000793</td>\n",
+       "      <td>[0.22208574, 0.045346797, 0.3416304, 0.6416262...</td>\n",
+       "      <td>b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR\\x00\\x00\\...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>portrait of a dancing eagle woman, beautiful b...</td>\n",
+       "      <td>2250159284</td>\n",
+       "      <td>50</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>k_lms</td>\n",
+       "      <td>512</td>\n",
+       "      <td>640</td>\n",
+       "      <td>2022-08-20 05:28:00</td>\n",
+       "      <td>0.276650</td>\n",
+       "      <td>0.003090</td>\n",
+       "      <td>[0.23513708, 0.23905377, -0.25548398, 0.15406,...</td>\n",
+       "      <td>b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR\\x00\\x00\\...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>epic 3 d, become legend shiji! gpu mecha contr...</td>\n",
+       "      <td>4292948605</td>\n",
+       "      <td>50</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>k_lms</td>\n",
+       "      <td>512</td>\n",
+       "      <td>768</td>\n",
+       "      <td>2022-08-20 05:28:00</td>\n",
+       "      <td>0.090421</td>\n",
+       "      <td>0.000533</td>\n",
+       "      <td>[0.13876896, 0.02688741, -0.73428893, -0.00962...</td>\n",
+       "      <td>b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR\\x00\\x00\\...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>an airbrush painting of cyber war machine scen...</td>\n",
+       "      <td>2374713726</td>\n",
+       "      <td>50</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>k_lms</td>\n",
+       "      <td>512</td>\n",
+       "      <td>768</td>\n",
+       "      <td>2022-08-20 05:29:00</td>\n",
+       "      <td>0.078309</td>\n",
+       "      <td>0.000597</td>\n",
+       "      <td>[0.44222537, -0.16692133, 0.16401242, 0.335270...</td>\n",
+       "      <td>b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR\\x00\\x00\\...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>concept art of a silent hill monster. painted ...</td>\n",
+       "      <td>2320897141</td>\n",
+       "      <td>50</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>k_lms</td>\n",
+       "      <td>640</td>\n",
+       "      <td>512</td>\n",
+       "      <td>2022-08-20 05:29:00</td>\n",
+       "      <td>0.086802</td>\n",
+       "      <td>0.083516</td>\n",
+       "      <td>[0.21429706, -0.18471082, -0.30426037, 0.42390...</td>\n",
+       "      <td>b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR\\x00\\x00\\...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              prompt        seed  step   cfg  \\\n",
+       "0  a renaissance portrait of dwayne johnson, art ...  2480545905    50  16.0   \n",
+       "1  portrait of a dancing eagle woman, beautiful b...  2250159284    50   9.0   \n",
+       "2  epic 3 d, become legend shiji! gpu mecha contr...  4292948605    50   7.0   \n",
+       "3  an airbrush painting of cyber war machine scen...  2374713726    50  12.0   \n",
+       "4  concept art of a silent hill monster. painted ...  2320897141    50   6.0   \n",
+       "\n",
+       "             sampler  width  height           timestamp  image_nsfw  \\\n",
+       "0  k_euler_ancestral    512     768 2022-08-20 05:28:00    0.163488   \n",
+       "1              k_lms    512     640 2022-08-20 05:28:00    0.276650   \n",
+       "2              k_lms    512     768 2022-08-20 05:28:00    0.090421   \n",
+       "3              k_lms    512     768 2022-08-20 05:29:00    0.078309   \n",
+       "4              k_lms    640     512 2022-08-20 05:29:00    0.086802   \n",
+       "\n",
+       "   prompt_nsfw                                             vector  \\\n",
+       "0     0.000793  [0.22208574, 0.045346797, 0.3416304, 0.6416262...   \n",
+       "1     0.003090  [0.23513708, 0.23905377, -0.25548398, 0.15406,...   \n",
+       "2     0.000533  [0.13876896, 0.02688741, -0.73428893, -0.00962...   \n",
+       "3     0.000597  [0.44222537, -0.16692133, 0.16401242, 0.335270...   \n",
+       "4     0.083516  [0.21429706, -0.18471082, -0.30426037, 0.42390...   \n",
+       "\n",
+       "                                               image  \n",
+       "0  b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR\\x00\\x00\\...  \n",
+       "1  b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR\\x00\\x00\\...  \n",
+       "2  b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR\\x00\\x00\\...  \n",
+       "3  b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR\\x00\\x00\\...  \n",
+       "4  b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR\\x00\\x00\\...  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tbl.schema\n",
+    "tbl.to_pandas().head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "5e4d7a54",
    "metadata": {},
@@ -155,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "10b8de6d",
    "metadata": {},
    "outputs": [],
@@ -207,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "b6f40300",
    "metadata": {},
    "outputs": [
@@ -244,7 +396,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
