--- a/applications/chat_with_anywebsite/main.ipynb
+++ b/applications/chat_with_anywebsite/main.ipynb
@@ -243,12 +243,13 @@
         "        return documents\n",
         "\n",
         "    def load_llm(self):\n",
-        "        llm = CTransformers(\n",
-        "            model=\"mistral-7b-instruct-v0.1.Q5_K_M.gguf\",\n",
-        "            model_type=\"mistral\"\n",
-        "        )\n",
-        "        return llm\n",
-        "\n",
+        "        #llm = CTransformers(\n",
+        "        #    model=\"mistral-7b-instruct-v0.1.Q5_K_M.gguf\",\n",
+        "        #    model_type=\"mistral\"\n",
+        "        #)\n",
+        " 
+                  llm = CTransformers(model='TheBloke/Mistral-7B-v0.1-GGUF', model_file='mistral-7b-v0.1.Q4_K_M.gguf',model_type="mistral")\n"
+                  return llm\n",
         "    def split_text(self, documents):\n",
         "        text_splitter = RecursiveCharacterTextSplitter(\n",
         "            chunk_size=120,\n",
